@@ -40,6 +40,10 @@ AnyEvent::Open3::Simple
 
 =item *
 
+AnyEvent::WebSocket::Client
+
+=item *
+
 App::Ack
 
 =item *
@@ -361,6 +365,10 @@ URI
 =item *
 
 URI::Encode
+
+=item *
+
+URI::ws
 
 =item *
 
