@@ -28,6 +28,7 @@ remove = strict
 AnyEvent::Finger                               = 0.07
 AnyEvent::Ident                                = 0.05
 AnyEvent::Open3::Simple                        = 0.71
+AnyEvent::WebSocket::Client                    = 0.05
 App::RegexFileUtils                            = 0.05
 Authen::Simple::PlugAuth                       = 0.01
 Clustericious                                  = 0.9930
@@ -37,7 +38,7 @@ Clustericious::Config                          = 0.26
 Clustericious::Log                             = 0.14
 File::Listing::Ftpcopy                         = 0.04
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
-Log::Log4perl::Appender::TAP                   = 0.01
+Log::Log4perl::Appender::TAP                   = 0.02
 Mojolicious::Plugin::Ident                     = 0.30
 Mojolicious::Plugin::TtRenderer                = 1.50
 PlugAuth                                       = 0.23
@@ -52,6 +53,7 @@ Shell::Config::Generate                        = 0.08
 Shell::Guess                                   = 0.01
 Test::Clustericious::Cluster                   = 0.10
 Test::Fixme                                    = 0.10
+URI::ws                                        = 0.01
 WebService::LiveJournal                        = 0.06
 WebService::TwitterBootstrap::Download::Custom = 0.03
 Yars                                           = 0.89
