@@ -1,12 +1,13 @@
 use strict;
 use warnings;
 use EV;
-use Test::More tests => 96;
+use Test::More tests => 98;
 use_ok 'Task::BeLike::Plicease';
 require_ok 'AnyEvent';
 require_ok 'AnyEvent::Finger';
 require_ok 'AnyEvent::Ident';
 require_ok 'AnyEvent::Open3::Simple';
+require_ok 'AnyEvent::WebSocket::Client';
 require_ok 'App::Ack';
 require_ok 'App::cpanminus';
 require_ok 'App::RegexFileUtils';
@@ -91,6 +92,7 @@ require_ok 'TinyMake';
 require_ok 'Try::Tiny';
 require_ok 'URI';
 require_ok 'URI::Encode';
+require_ok 'URI::ws';
 require_ok 'Validate::Tiny';
 require_ok 'WebService::LiveJournal';
 require_ok 'WebService::TwitterBootstrap::Download::Custom';
